# my-portfolio-mcp

./: README.md  pyproject.toml  test_mcp_tool.py
mcpsrv/: mcp_portfolio_server.py  surveymonkey_mcp.py
