[project]
name = "my-portfolio-mcp"
version = "0.1.0"
description = "Portfolio MCP server for Dataiku agent tools"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
]

[project.scripts]
mcp-portfolio-server = "mcpsrv.mcp_portfolio_server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcpsrv"]
